; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_fz_java_device_stroke_path.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_fz_java_device_stroke_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32, %struct.TYPE_13__** }
%struct.TYPE_13__ = type { i64 (%struct.TYPE_13__**)*, i32 (%struct.TYPE_13__**, i32, i32, i32, i32, i32, i32, i32, float, i32)* }

@FZ_MAX_COLORS = common dso_local global i32 0, align 4
@mid_Device_strokePath = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32*, i32, i32*, float*, float, i32)* @fz_java_device_stroke_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fz_java_device_stroke_path(i32* %0, i32* %1, i32* %2, i32* %3, i32 %4, i32* %5, float* %6, float %7, i32 %8) #0 {
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca float*, align 8
  %17 = alloca float, align 4
  %18 = alloca i32, align 4
  %19 = alloca %struct.TYPE_12__*, align 8
  %20 = alloca %struct.TYPE_13__**, align 8
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  store i32* %0, i32** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32* %2, i32** %12, align 8
  store i32* %3, i32** %13, align 8
  store i32 %4, i32* %14, align 4
  store i32* %5, i32** %15, align 8
  store float* %6, float** %16, align 8
  store float %7, float* %17, align 4
  store i32 %8, i32* %18, align 4
  %27 = load i32*, i32** %11, align 8
  %28 = bitcast i32* %27 to %struct.TYPE_12__*
  store %struct.TYPE_12__* %28, %struct.TYPE_12__** %19, align 8
  %29 = load %struct.TYPE_12__*, %struct.TYPE_12__** %19, align 8
  %30 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %29, i32 0, i32 1
  %31 = load %struct.TYPE_13__**, %struct.TYPE_13__*** %30, align 8
  store %struct.TYPE_13__** %31, %struct.TYPE_13__*** %20, align 8
  %32 = load i32*, i32** %10, align 8
  %33 = load %struct.TYPE_13__**, %struct.TYPE_13__*** %20, align 8
  %34 = load i32*, i32** %12, align 8
  %35 = call i32 @to_Path(i32* %32, %struct.TYPE_13__** %33, i32* %34)
  store i32 %35, i32* %21, align 4
  %36 = load i32*, i32** %10, align 8
  %37 = load %struct.TYPE_13__**, %struct.TYPE_13__*** %20, align 8
  %38 = load i32*, i32** %13, align 8
  %39 = call i32 @to_StrokeState(i32* %36, %struct.TYPE_13__** %37, i32* %38)
  store i32 %39, i32* %22, align 4
  %40 = load i32*, i32** %10, align 8
  %41 = load %struct.TYPE_13__**, %struct.TYPE_13__*** %20, align 8
  %42 = load i32*, i32** %15, align 8
  %43 = call i32 @to_ColorSpace(i32* %40, %struct.TYPE_13__** %41, i32* %42)
  store i32 %43, i32* %23, align 4
  %44 = load i32*, i32** %10, align 8
  %45 = load %struct.TYPE_13__**, %struct.TYPE_13__*** %20, align 8
  %46 = load i32, i32* %14, align 4
  %47 = call i32 @to_Matrix(i32* %44, %struct.TYPE_13__** %45, i32 %46)
  store i32 %47, i32* %24, align 4
  %48 = load i32*, i32** %10, align 8
  %49 = load %struct.TYPE_13__**, %struct.TYPE_13__*** %20, align 8
  %50 = load float*, float** %16, align 8
  %51 = load i32*, i32** %15, align 8
  %52 = icmp ne i32* %51, null
  br i1 %52, label %53, label %57

53:                                               ; preds = %9
  %54 = load i32*, i32** %10, align 8
  %55 = load i32*, i32** %15, align 8
  %56 = call i32 @fz_colorspace_n(i32* %54, i32* %55)
  br label %59

57:                                               ; preds = %9
  %58 = load i32, i32* @FZ_MAX_COLORS, align 4
  br label %59

59:                                               ; preds = %57, %53
  %60 = phi i32 [ %56, %53 ], [ %58, %57 ]
  %61 = call i32 @to_jfloatArray(i32* %48, %struct.TYPE_13__** %49, float* %50, i32 %60)
  store i32 %61, i32* %25, align 4
  %62 = load i32*, i32** %10, align 8
  %63 = load %struct.TYPE_13__**, %struct.TYPE_13__*** %20, align 8
  %64 = load i32, i32* %18, align 4
  %65 = call i32 @to_ColorParams_safe(i32* %62, %struct.TYPE_13__** %63, i32 %64)
  store i32 %65, i32* %26, align 4
  %66 = load %struct.TYPE_13__**, %struct.TYPE_13__*** %20, align 8
  %67 = load %struct.TYPE_13__*, %struct.TYPE_13__** %66, align 8
  %68 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %67, i32 0, i32 1
  %69 = load i32 (%struct.TYPE_13__**, i32, i32, i32, i32, i32, i32, i32, float, i32)*, i32 (%struct.TYPE_13__**, i32, i32, i32, i32, i32, i32, i32, float, i32)** %68, align 8
  %70 = load %struct.TYPE_13__**, %struct.TYPE_13__*** %20, align 8
  %71 = load %struct.TYPE_12__*, %struct.TYPE_12__** %19, align 8
  %72 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %71, i32 0, i32 0
  %73 = load i32, i32* %72, align 8
  %74 = load i32, i32* @mid_Device_strokePath, align 4
  %75 = load i32, i32* %21, align 4
  %76 = load i32, i32* %22, align 4
  %77 = load i32, i32* %24, align 4
  %78 = load i32, i32* %23, align 4
  %79 = load i32, i32* %25, align 4
  %80 = load float, float* %17, align 4
  %81 = load i32, i32* %26, align 4
  %82 = call i32 %69(%struct.TYPE_13__** %70, i32 %73, i32 %74, i32 %75, i32 %76, i32 %77, i32 %78, i32 %79, float %80, i32 %81)
  %83 = load %struct.TYPE_13__**, %struct.TYPE_13__*** %20, align 8
  %84 = load %struct.TYPE_13__*, %struct.TYPE_13__** %83, align 8
  %85 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %84, i32 0, i32 0
  %86 = load i64 (%struct.TYPE_13__**)*, i64 (%struct.TYPE_13__**)** %85, align 8
  %87 = load %struct.TYPE_13__**, %struct.TYPE_13__*** %20, align 8
  %88 = call i64 %86(%struct.TYPE_13__** %87)
  %89 = icmp ne i64 %88, 0
  br i1 %89, label %90, label %94

90:                                               ; preds = %59
  %91 = load i32*, i32** %10, align 8
  %92 = load %struct.TYPE_13__**, %struct.TYPE_13__*** %20, align 8
  %93 = call i32 @fz_throw_java(i32* %91, %struct.TYPE_13__** %92)
  br label %94

94:                                               ; preds = %90, %59
  ret void
}

declare dso_local i32 @to_Path(i32*, %struct.TYPE_13__**, i32*) #1

declare dso_local i32 @to_StrokeState(i32*, %struct.TYPE_13__**, i32*) #1

declare dso_local i32 @to_ColorSpace(i32*, %struct.TYPE_13__**, i32*) #1

declare dso_local i32 @to_Matrix(i32*, %struct.TYPE_13__**, i32) #1

declare dso_local i32 @to_jfloatArray(i32*, %struct.TYPE_13__**, float*, i32) #1

declare dso_local i32 @fz_colorspace_n(i32*, i32*) #1

declare dso_local i32 @to_ColorParams_safe(i32*, %struct.TYPE_13__**, i32) #1

declare dso_local i32 @fz_throw_java(i32*, %struct.TYPE_13__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
